Actualizacion de foto de perfil

--- a/src/components/Inicio.astro
+++ b/src/components/Inicio.astro
@@ -36,7 +36,7 @@ import { Icon } from 'astro-icon/components';
             <div class="md:w-1/2 flex justify-center">
                 <div class="relative w-64 h-64 md:w-80 md:h-80 rounded-full overflow-hidden border-4 border-primary/20">
                     <img 
-                        src="/image/personal-image.jpeg?height=320&width=320" 
+                        src="/image/personal-image-2.jpeg?height=320&width=320" 
                         alt="Tu Nombre" 
                         class="w-full h-full object-cover"
                     />
